@@ -1,5 +1,5 @@
 Package: spatstat.explore
-Version: 3.2-5.012
+Version: 3.2-5.013
 Date: 2024-01-29
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
